chore(packagejson): npx nx migrate latest

--- a/plugin/project.json
+++ b/plugin/project.json
@@ -3,6 +3,7 @@
   "$schema": "../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "plugin/src",
   "projectType": "library",
+  "tags": [],
   "targets": {
     "build": {
       "executor": "@nx/js:tsc",
@@ -30,6 +31,5 @@
         "jestConfig": "plugin/jest.config.ts"
       }
     }
-  },
-  "tags": []
+  }
 }
