--- a/package.json
+++ b/package.json
@@ -37,11 +37,11 @@
     "@babel/preset-react": "^7.27.1",
     "@babel/preset-typescript": "^7.27.1",
     "@eslint/eslintrc": "^3.3.1",
-    "@nx/eslint": "21.2.2",
-    "@nx/eslint-plugin": "21.2.2",
-    "@nx/jest": "21.2.2",
-    "@nx/js": "21.2.2",
-    "@nx/workspace": "21.2.2",
+    "@nx/eslint": "21.3.10",
+    "@nx/eslint-plugin": "21.3.10",
+    "@nx/jest": "21.3.10",
+    "@nx/js": "21.3.10",
+    "@nx/workspace": "21.3.10",
     "@shelf/jest-mongodb": "^5.2.2",
     "@swc-node/register": "1.10.10",
     "@swc/core": "1.12.11",
@@ -56,7 +56,7 @@
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "8.36.0",
     "@typescript-eslint/parser": "8.36.0",
-    "babel-jest": "30.0.4",
+    "babel-jest": "30.0.5",
     "commitizen": "^4.3.1",
     "copyfiles": "^2.4.1",
     "cross-env": "^7.0.3",
@@ -65,20 +65,21 @@
     "eslint-config-prettier": "10.1.5",
     "get-port": "^7.1.0",
     "isomorphic-fetch": "^3.0.0",
-    "jest": "29.7.0",
+    "jest": "30.0.5",
     "jest-environment-node": "^29.7.0",
     "mongodb-memory-server": "^10.1.4",
     "nock": "^14.0.5",
     "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10",
-    "nx": "21.2.2",
+    "nx": "21.3.10",
     "prettier": "^3.6.2",
     "prettier-2": "npm:prettier@^2",
-    "ts-jest": "^29.4.0",
+    "ts-jest": "29.4.0",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "5.8.3",
-    "verdaccio": "6.1.5"
+    "verdaccio": "6.1.5",
+    "jest-util": "30.0.5"
   },
   "nx": {
     "includedScripts": []
