--- a/package.json
+++ b/package.json
@@ -9,31 +9,31 @@
   },
   "private": true,
   "dependencies": {
-    "@crowdin/crowdin-api-client": "^1.46.0",
-    "@payloadcms/db-mongodb": "3.49.1",
-    "@payloadcms/richtext-lexical": "3.49.1",
-    "@payloadcms/richtext-slate": "3.49.1",
-    "@payloadcms/ui": "^3.49.1",
+    "@crowdin/crowdin-api-client": "^1.48.3",
+    "@payloadcms/db-mongodb": "3.57.0",
+    "@payloadcms/richtext-lexical": "3.57.0",
+    "@payloadcms/richtext-slate": "3.57.0",
+    "@payloadcms/ui": "^3.57.0",
     "@slate-serializers/html": "^2.2.3",
     "@swc/helpers": "0.5.17",
     "@types/dot-object": "^2.1.6",
     "cross-env": "^10.0.0",
     "deep-equal": "^2.2.3",
     "dot-object": "^2.1.5",
-    "dotenv": "^17.2.1",
-    "es-toolkit": "^1.39.8",
+    "dotenv": "^17.2.2",
+    "es-toolkit": "^1.39.10",
     "graphql": "^16.11.0",
-    "joi": "^17.13.3",
-    "next": "15.4.5",
-    "payload": "3.49.1",
+    "joi": "^18.0.1",
+    "next": "15.5.4",
+    "payload": "3.57.0",
     "react": "19.1.1",
     "react-dom": "19.1.1",
-    "sharp": "0.34.3",
+    "sharp": "0.34.4",
     "tslib": "^2.8.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.28.0",
-    "@babel/preset-env": "^7.28.0",
+    "@babel/core": "^7.28.4",
+    "@babel/preset-env": "^7.28.3",
     "@babel/preset-react": "^7.27.1",
     "@babel/preset-typescript": "^7.27.1",
     "@eslint/eslintrc": "^3.3.1",
@@ -42,42 +42,41 @@
     "@nx/jest": "21.5.3",
     "@nx/js": "21.5.3",
     "@nx/workspace": "21.5.3",
-    "@swc-node/register": "1.10.10",
-    "@swc/core": "1.13.3",
+    "@swc-node/register": "1.11.1",
+    "@swc/core": "1.13.19",
     "@swc/jest": "0.2.39",
     "@swc/register": "^0.1.10",
     "@types/deep-equal": "^1.0.4",
     "@types/express": "^5.0.3",
     "@types/jest": "30.0.0",
-    "@types/node": "^24.1.0",
-    "@types/react": "19.1.9",
-    "@types/react-dom": "19.1.7",
-    "@types/uuid": "^10.0.0",
+    "@types/node": "^24.5.2",
+    "@types/react": "19.1.13",
+    "@types/react-dom": "19.1.9",
     "@typescript-eslint/eslint-plugin": "8.44.1",
     "@typescript-eslint/parser": "8.44.1",
-    "babel-jest": "30.0.5",
+    "babel-jest": "30.1.2",
     "commitizen": "^4.3.1",
     "copyfiles": "^2.4.1",
     "cross-env": "^10.0.0",
-    "eslint": "9.32.0",
-    "eslint-config-next": "15.4.5",
+    "eslint": "9.36.0",
+    "eslint-config-next": "15.5.4",
     "eslint-config-prettier": "10.1.8",
     "get-port": "^7.1.0",
     "isomorphic-fetch": "^3.0.0",
-    "jest": "30.0.5",
-    "jest-environment-node": "^30.0.5",
-    "mongodb-memory-server": "^10.1.4",
-    "nock": "^14.0.8",
-    "nodemailer": "^7.0.5",
+    "jest": "30.1.3",
+    "jest-environment-node": "^30.1.2",
+    "jest-util": "30.0.5",
+    "mongodb-memory-server": "^10.2.1",
+    "nock": "^14.0.10",
+    "nodemailer": "^7.0.6",
     "nodemon": "^3.1.10",
     "nx": "21.5.3",
     "prettier": "^3.6.2",
-    "ts-jest": "29.4.0",
+    "ts-jest": "29.4.4",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "5.9.2",
-    "verdaccio": "6.1.6",
-    "jest-util": "30.0.5"
+    "verdaccio": "6.1.6"
   },
   "nx": {
     "includedScripts": []
