--- a/package.json
+++ b/package.json
@@ -9,75 +9,75 @@
   },
   "private": true,
   "dependencies": {
-    "@crowdin/crowdin-api-client": "^1.48.3",
-    "@payloadcms/db-mongodb": "3.59.1",
-    "@payloadcms/next": "^3.59.1",
-    "@payloadcms/richtext-lexical": "3.59.1",
-    "@payloadcms/richtext-slate": "3.59.1",
-    "@payloadcms/ui": "^3.59.1",
+    "@crowdin/crowdin-api-client": "^1.52.0",
+    "@payloadcms/db-mongodb": "3.75.0",
+    "@payloadcms/next": "^3.75.0",
+    "@payloadcms/richtext-lexical": "3.75.0",
+    "@payloadcms/richtext-slate": "3.75.0",
+    "@payloadcms/ui": "^3.75.0",
     "@slate-serializers/html": "^2.2.3",
     "@swc-node/register": "^1.11.1",
-    "@swc/helpers": "0.5.17",
+    "@swc/helpers": "0.5.18",
     "@types/dot-object": "^2.1.6",
     "cross-env": "^10.1.0",
     "deep-equal": "^2.2.3",
     "dot-object": "^2.1.5",
-    "dotenv": "^17.2.3",
-    "es-toolkit": "^1.40.0",
-    "graphql": "^16.11.0",
-    "joi": "^18.0.1",
-    "next": "15.5.5",
-    "payload": "3.59.1",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "sharp": "0.34.4",
+    "dotenv": "^17.2.4",
+    "es-toolkit": "^1.44.0",
+    "graphql": "^16.12.0",
+    "joi": "^18.0.2",
+    "next": "16.1.6",
+    "payload": "3.75.0",
+    "react": "19.2.4",
+    "react-dom": "19.2.4",
+    "sharp": "0.34.5",
     "tslib": "^2.8.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.28.4",
-    "@babel/preset-env": "^7.28.3",
-    "@babel/preset-react": "^7.27.1",
-    "@babel/preset-typescript": "^7.27.1",
-    "@eslint/eslintrc": "^3.3.1",
+    "@babel/core": "^7.29.0",
+    "@babel/preset-env": "^7.29.0",
+    "@babel/preset-react": "^7.28.5",
+    "@babel/preset-typescript": "^7.28.5",
+    "@eslint/eslintrc": "^3.3.3",
     "@nx/eslint": "22.4.5",
     "@nx/eslint-plugin": "22.4.5",
     "@nx/jest": "22.4.5",
     "@nx/js": "22.4.5",
     "@nx/workspace": "22.4.5",
-    "@swc/core": "1.13.19",
+    "@swc/core": "1.15.11",
     "@swc/jest": "0.2.39",
     "@swc/register": "^0.1.10",
     "@types/deep-equal": "^1.0.4",
-    "@types/express": "^5.0.3",
+    "@types/express": "^5.0.6",
     "@types/jest": "30.0.0",
-    "@types/node": "^24.7.2",
-    "@types/react": "19.2.2",
-    "@types/react-dom": "19.2.2",
-    "@typescript-eslint/eslint-plugin": "8.46.1",
-    "@typescript-eslint/parser": "8.46.1",
+    "@types/node": "^25.2.2",
+    "@types/react": "19.2.13",
+    "@types/react-dom": "19.2.3",
+    "@typescript-eslint/eslint-plugin": "8.54.0",
+    "@typescript-eslint/parser": "8.54.0",
     "babel-jest": "30.2.0",
     "commitizen": "^4.3.1",
     "copyfiles": "^2.4.1",
     "cross-env": "^10.1.0",
-    "eslint": "9.37.0",
-    "eslint-config-next": "15.5.5",
+    "eslint": "^9.37.0",
+    "eslint-config-next": "16.1.6",
     "eslint-config-prettier": "10.1.8",
     "get-port": "^7.1.0",
     "isomorphic-fetch": "^3.0.0",
     "jest": "30.2.0",
     "jest-environment-node": "^30.2.0",
     "jest-util": "30.2.0",
-    "mongodb-memory-server": "^10.2.3",
+    "mongodb-memory-server": "^11.0.1",
     "nock": "^14.0.10",
-    "nodemailer": "^7.0.9",
-    "nodemon": "^3.1.10",
+    "nodemailer": "^8.0.1",
+    "nodemon": "^3.1.11",
     "nx": "22.4.5",
-    "prettier": "^3.6.2",
-    "ts-jest": "29.4.5",
+    "prettier": "^3.8.1",
+    "ts-jest": "29.4.6",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "5.9.3",
-    "verdaccio": "6.2.0"
+    "verdaccio": "6.2.5"
   },
   "nx": {
     "includedScripts": []
